Move OpenLDAP CA on HomeAssistant and NodeRED

--- a/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
+++ b/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
@@ -34,8 +34,8 @@ spec:
           mountPath: /config
         - mountPath: /opt/ldap-auth
           name: homeassistant-ldap-auth
-        - name: certs-volume
-          mountPath: /opt/openldap-ca.crt
+        - name: ldap-certs-volume
+          mountPath: /etc/ssl/ldap/ca.cert
           subPath: ca.crt
         resources:
           requests:
@@ -52,7 +52,7 @@ spec:
         configMap:
           name: homeassistant-ldap-auth
           defaultMode: 0755
-      - name: certs-volume
+      - name: ldap-certs-volume
         secret:
           secretName: openldap-ca   
       nodeSelector:
