--- a/apps/home/homeassistant/config/ldap-auth/config.cfg.j2
+++ b/apps/home/homeassistant/config/ldap-auth/config.cfg.j2
@@ -22,7 +22,7 @@ CLIENT="curl"
 
 # Add SERVER, USERDN etc. here...
 SERVER="ldaps://{{ homeassistant_ldap_servername }}"
-export SSL_CERT_FILE=/opt/openldap-ca.crt
+export SSL_CERT_FILE=/etc/ssl/ldap/ca.cert
 
 USERDN="cn=$(ldap_dn_escape "$username"),{{ homeassistant_ldap_users_dn }}"
 BASEDN="$USERDN"
