--- a/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
+++ b/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
@@ -37,6 +37,9 @@ spec:
         - name: ldap-certs-volume
           mountPath: /etc/ssl/ldap/ca.cert
           subPath: ca.crt
+        - name: mqtt-certs-volume
+          mountPath: /etc/ssl/mqtt/ca.cert
+          subPath: ca.crt
         resources:
           requests:
             cpu: "{{ homeassistant_homeassistant_requests_cpu | default("500m") }}"
@@ -55,6 +58,9 @@ spec:
       - name: ldap-certs-volume
         secret:
           secretName: openldap-ca   
+      - name: mqtt-certs-volume
+        secret:
+          secretName: mosquitto-certs
       nodeSelector:
         capability/home: 'yes'
   volumeClaimTemplates:
