--- a/apps/home/mosquitto/deploy/statefulSet.yaml.j2
+++ b/apps/home/mosquitto/deploy/statefulSet.yaml.j2
@@ -26,7 +26,9 @@ spec:
         name: mosquitto
         ports:
         - containerPort: 1883
-          name: mosquitto
+          name: mqtt
+        - containerPort: 8883
+          name: mqtts
         resources:
           requests:
             cpu: "{{ mosquitto_requests_cpu | default("100m") }}"
@@ -38,7 +40,9 @@ spec:
         - name: tz-config
           mountPath: /etc/localtime
         - name: mosquitto-config
-          mountPath:  /mosquitto/config
+          mountPath: /mosquitto/config
+        - name: certs-volume
+          mountPath: /etc/ssl/mqtt
         - name: mosquitto-data-pv-claim
           mountPath: /mosquitto/data
       securityContext:
@@ -50,6 +54,9 @@ spec:
       - name: mosquitto-config
         configMap:
           name: mosquitto-config
+      - name: certs-volume
+        secret:
+          secretName: mosquitto-certs
       nodeSelector:
         capability/home: 'yes'
   volumeClaimTemplates:
