--- a/ansible/roles/nginx/templates/streams_include.conf.j2
+++ b/ansible/roles/nginx/templates/streams_include.conf.j2
@@ -3,11 +3,7 @@
 
 stream {
 
-#	# access_log will be supported in 1.11.x
-#	log_format basic '$remote_addr [$time_local] $protocol $status $bytes_sent $bytes_received $session_time';
-#	access_log  /var/log/nginx/stream_access.log basic;
-
-	error_log /var/log/nginx/stream_error.log;
+	log_format basic '$remote_addr [$time_local] $protocol $status $bytes_sent $bytes_received $session_time';
 
 	include {{ nginx_streams_conf_dir }}/*.conf;
 	include {{ nginx_streams_enabled_dir }}/*;
