--- a/apps/auth/openldap/config/my-env.startup.yaml.j2
+++ b/apps/auth/openldap/config/my-env.startup.yaml.j2
@@ -9,7 +9,8 @@
 # Required and used for new ldap server only
 LDAP_ORGANISATION: {{ openldap_ldap_organisation }}
 LDAP_DOMAIN: {{ openldap_ldap_domain }}
-LDAP_BASE_DN: {{ openldap_ldap_basedn }}#if empty automatically set from LDAP_DOMAIN
+#if empty automatically set from LDAP_DOMAIN
+LDAP_BASE_DN: {{ openldap_ldap_basedn }}
 
 LDAP_ADMIN_PASSWORD: {{ openldap_ldap_admin_password }}
 LDAP_CONFIG_PASSWORD: {{ openldap_ldap_config_password }}
