Migrate OpenLDAP on the newly created PKI

--- a/apps/auth/lemonldap/deploy/statefulset.yaml.j2
+++ b/apps/auth/lemonldap/deploy/statefulset.yaml.j2
@@ -82,7 +82,7 @@ spec:
           name: lemonldap-lmconf
       - name: certs-volume
         secret:
-          secretName: openldap-ca
+          secretName: cluster-ca
       - name: smtp-certs-volume
         secret:
           secretName: zonemta-ca
