--- a/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
+++ b/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
@@ -57,7 +57,7 @@ spec:
           defaultMode: 0755
       - name: ldap-certs-volume
         secret:
-          secretName: openldap-ca   
+          secretName: cluster-ca   
       - name: mqtt-certs-volume
         secret:
           secretName: mosquitto-certs
