--- a/apps/logging/elasticsearch/deploy/statefulSet.yaml.j2
+++ b/apps/logging/elasticsearch/deploy/statefulSet.yaml.j2
@@ -103,7 +103,7 @@ spec:
           secretName: elasticsearch-certs
       - name: openldap-certs-volume
         secret:
-          secretName: openldap-ca
+          secretName: cluster-ca
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
