--- a/apps/stream/airsonic/deploy/statefulSet.yaml.j2
+++ b/apps/stream/airsonic/deploy/statefulSet.yaml.j2
@@ -104,7 +104,7 @@ spec:
           claimName: nfs-multimetia
       - name: ldap-certs-volume
         secret:
-          secretName: openldap-ca
+          secretName: cluster-ca
       - name: smtp-certs-volume
         secret:
           secretName: zonemta-ca
