--- a/apps/auth/openldap/config/my-env.startup.yaml.j2
+++ b/apps/auth/openldap/config/my-env.startup.yaml.j2
@@ -26,8 +26,8 @@ LDAP_BACKEND: mdb
 
 # Tls
 LDAP_TLS: true
-LDAP_TLS_CRT_FILENAME: ldap.crt
-LDAP_TLS_KEY_FILENAME: ldap.key
+LDAP_TLS_CRT_FILENAME: server.crt
+LDAP_TLS_KEY_FILENAME: server.key
 LDAP_TLS_DH_PARAM_FILENAME: dhparam.pem
 LDAP_TLS_CA_CRT_FILENAME: ca.crt
 
