--- a/apps/dev/gitlab/deploy/statefulSet.yaml.j2
+++ b/apps/dev/gitlab/deploy/statefulSet.yaml.j2
@@ -69,7 +69,7 @@ spec:
           name: gitlab
       - name: certs-volume
         secret:
-          secretName: openldap-ca
+          secretName: cluster-ca
       - name: smtp-certs-volume
         secret:
           secretName: zonemta-ca
