--- a/apps/home/nodered/deploy/statefulSet.yaml.j2
+++ b/apps/home/nodered/deploy/statefulSet.yaml.j2
@@ -56,7 +56,7 @@ spec:
           name: nodered
       - name: ldap-certs-volume
         secret:
-          secretName: openldap-ca
+          secretName: cluster-ca
       nodeSelector:
         capability/home: 'yes'
   volumeClaimTemplates:
