--- a/apps/web/ttrss/deploy/ttrss-deployment.yaml.j2
+++ b/apps/web/ttrss/deploy/ttrss-deployment.yaml.j2
@@ -58,7 +58,7 @@ spec:
           name: ttrss-config
       - name: ldap-certs-volume
         secret:
-          secretName: openldap-ca
+          secretName: cluster-ca
       - name: smtp-certs-volume
         secret:
           secretName: zonemta-ca
