Migrate ZoneMTA on the newly created PKI

--- a/apps/auth/lemonldap/deploy/statefulset.yaml.j2
+++ b/apps/auth/lemonldap/deploy/statefulset.yaml.j2
@@ -85,7 +85,7 @@ spec:
           secretName: cluster-ca
       - name: smtp-certs-volume
         secret:
-          secretName: zonemta-ca
+          secretName: cluster-ca
       nodeSelector:
         capability/general-purpose: 'yes'
   volumeClaimTemplates:
