--- a/apps/web/ttrss/deploy/ttrss-deployment.yaml.j2
+++ b/apps/web/ttrss/deploy/ttrss-deployment.yaml.j2
@@ -61,6 +61,6 @@ spec:
           secretName: cluster-ca
       - name: smtp-certs-volume
         secret:
-          secretName: zonemta-ca
+          secretName: cluster-ca
       nodeSelector:
         capability/general-purpose: 'yes'
