Migrate ElasticSearch on the newly created PKI

--- a/apps/logging/elasticsearch/deploy/prometheus_exporter/deployment.yaml.j2
+++ b/apps/logging/elasticsearch/deploy/prometheus_exporter/deployment.yaml.j2
@@ -87,5 +87,5 @@ spec:
           path: /etc/localtime
       - name: certs-volume
         secret:
-          secretName: elasticsearch-ca
+          secretName: cluster-ca
       restartPolicy: Always
