--- a/apps/logging/fluentd/deploy/deployment.yaml.j2
+++ b/apps/logging/fluentd/deploy/deployment.yaml.j2
@@ -68,6 +68,6 @@ spec:
           name: fluentd-includes
       - name: certs-volume
         secret:
-          secretName: elasticsearch-ca
+          secretName: cluster-ca
       nodeSelector:
         capability/general-purpose: 'yes'
