--- a/apps/logging/elasticsearch/config/elasticsearch.yml.j2
+++ b/apps/logging/elasticsearch/config/elasticsearch.yml.j2
@@ -7,13 +7,13 @@ network.host: 0.0.0.0
 discovery.zen.minimum_master_nodes: {{ (logging_elasticsearch_replicas / 2 + 1) | int }}
 
 ######## Start OpenDistro for Elasticsearch Security Configuration ########
-opendistro_security.ssl.transport.pemcert_filepath: certs/es-node.crt
-opendistro_security.ssl.transport.pemkey_filepath: certs/es-node.key
+opendistro_security.ssl.transport.pemcert_filepath: certs/server.crt
+opendistro_security.ssl.transport.pemkey_filepath: certs/server.key
 opendistro_security.ssl.transport.pemtrustedcas_filepath: certs/ca.crt
 opendistro_security.ssl.transport.enforce_hostname_verification: false
 opendistro_security.ssl.http.enabled: true
-opendistro_security.ssl.http.pemcert_filepath: certs/es-node.crt
-opendistro_security.ssl.http.pemkey_filepath: certs/es-node.key
+opendistro_security.ssl.http.pemcert_filepath: certs/server.crt
+opendistro_security.ssl.http.pemkey_filepath: certs/server.key
 opendistro_security.ssl.http.pemtrustedcas_filepath: certs/ca.crt
 opendistro_security.allow_unsafe_democertificates: false
 opendistro_security.allow_default_init_securityindex: true
