Clean cluster-ca usage on all applications

--- a/apps/auth/lemonldap/deploy/statefulset.yaml.j2
+++ b/apps/auth/lemonldap/deploy/statefulset.yaml.j2
@@ -67,11 +67,8 @@ spec:
         - name: lmconf-volume
           mountPath: /var/lib/lemonldap-ng/conf/lmConf-2.json
           subPath: lmConf.json
-        - name: certs-volume
+        - name: cluster-ca-volume
           mountPath: /var/lib/lemonldap-ng/server-certs/ca.crt
-          subPath: ca.crt
-        - name: smtp-certs-volume
-          mountPath: /var/lib/lemonldap-ng/smtp-certs/ca.crt
           subPath: ca.crt
       volumes:
       - name: tz-config
@@ -80,10 +77,7 @@ spec:
       - name: lmconf-volume
         configMap:
           name: lemonldap-lmconf
-      - name: certs-volume
-        secret:
-          secretName: cluster-ca
-      - name: smtp-certs-volume
+      - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
       nodeSelector:
