--- a/apps/home/homeassistant/prepare/configuration.yaml.j2
+++ b/apps/home/homeassistant/prepare/configuration.yaml.j2
@@ -54,7 +54,7 @@ mqtt:
   port: 8883
   username: !secret mqtt_username
   password: !secret mqtt_password
-  certificate: /etc/ssl/mqtt/ca.cert
+  certificate: /etc/ssl/cluster/ca.cert
   discovery: true
 
 notify:
