--- a/apps/monitoring/grafana/config/etc/ldap.toml.j2
+++ b/apps/monitoring/grafana/config/etc/ldap.toml.j2
@@ -14,7 +14,7 @@ start_tls = true
 # set to true if you want to skip ssl cert validation
 ssl_skip_verify = false
 # set to the path to your root CA certificate or leave unset to use system defaults
-root_ca_cert = "/etc/ldap/ca.crt"
+root_ca_cert = "/etc/ssl/cluster/ca.crt"
 # Authentication against LDAP servers requiring client certificates
 # client_cert = "/path/to/client.crt"
 # client_key = "/path/to/client.key"
