--- a/apps/stream/airsonic/deploy/statefulSet.yaml.j2
+++ b/apps/stream/airsonic/deploy/statefulSet.yaml.j2
@@ -40,19 +40,12 @@ spec:
             /usr/bin/keytool \
               -importcert -noprompt \
               -keystore /etc/ssl/certs/java_target/cacerts -storepass changeit \
-              -alias openldap -file /etc/ldap/ca.crt
-            /usr/bin/keytool \
-              -importcert -noprompt \
-              -keystore /etc/ssl/certs/java_target/cacerts -storepass changeit \
-              -alias zonemta -file /etc/smtp/ca.crt
+              -alias cluster -file /etc/ssl/cluster/ca.crt
         volumeMounts:
         - name: keystore-volume
           mountPath: /etc/ssl/certs/java_target
-        - name: ldap-certs-volume
-          mountPath: /etc/ldap/ca.crt
-          subPath: ca.crt
-        - name: smtp-certs-volume
-          mountPath: /etc/smtp/ca.crt
+        - name: cluster-ca-volume
+          mountPath: /etc/ssl/cluster/ca.crt
           subPath: ca.crt
       containers:
       - image: airsonic/airsonic:10.2.1-RELEASE
@@ -102,10 +95,7 @@ spec:
       - name: airsonic-multimedia
         persistentVolumeClaim:
           claimName: nfs-multimetia
-      - name: ldap-certs-volume
-        secret:
-          secretName: cluster-ca
-      - name: smtp-certs-volume
+      - name: cluster-ca-volume
         secret:
           secretName: cluster-ca
       - name: keystore-volume
