--- a/apps/infra/mailhog/deploy/ingress.yaml.j2
+++ b/apps/infra/mailhog/deploy/ingress.yaml.j2
@@ -6,6 +6,10 @@ metadata:
   labels:
     app: mailhog
 spec:
+  tls:
+    - hosts:
+      - infra.{{ web_base_domain }}
+      secretName: ingress-tls
   rules:
   - host: infra.{{ web_base_domain }}
     http:
