--- a/apps/home/nodered/deploy/ingress.yaml.j2
+++ b/apps/home/nodered/deploy/ingress.yaml.j2
@@ -6,6 +6,10 @@ metadata:
   labels:
     app: nodered
 spec:
+  tls:
+    - hosts:
+      - home.{{ web_base_domain }}
+      secretName: ingress-tls
   rules:
   - host: home.{{ web_base_domain }}
     http:
