--- a/apps/infra/unifi/deploy/ingress.yaml.j2
+++ b/apps/infra/unifi/deploy/ingress.yaml.j2
@@ -8,6 +8,10 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
+  tls:
+    - hosts:
+      - infra.{{ web_base_domain }}
+      secretName: ingress-tls
   rules:
   - host: unifi.{{ web_base_domain }}
     http:
