--- a/apps/logging/elasticsearch/deploy/ingress.yaml.j2
+++ b/apps/logging/elasticsearch/deploy/ingress.yaml.j2
@@ -9,6 +9,10 @@ metadata:
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
 spec:
+  tls:
+    - hosts:
+      - infra.{{ web_base_domain }}
+      secretName: ingress-tls
   rules:
   - host: infra.{{ web_base_domain }}
     http:
