--- a/apps/monitoring/grafana/deploy/ingress.yaml.j2
+++ b/apps/monitoring/grafana/deploy/ingress.yaml.j2
@@ -8,6 +8,10 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: "/$1"
 spec:
+  tls:
+    - hosts:
+      - infra.{{ web_base_domain }}
+      secretName: ingress-tls
   rules:
   - host: infra.{{ web_base_domain }}
     http:
