--- a/apps/web/heimdall/deploy/statefulSet.yaml.j2
+++ b/apps/web/heimdall/deploy/statefulSet.yaml.j2
@@ -42,6 +42,9 @@ spec:
         - name: heimdall-config
           mountPath: /config/www/.env
           subPath: .env
+        - name: heimdall-config
+          mountPath: /config/applicationsLoader.php
+          subPath: applicationsLoader.php
       volumes:
       - name: tz-config
         hostPath:
