Update the Prometheus Operator stack

--- a/apps/monitoring/prometheus-operator/config/alertmanager/alertmanager.yaml.j2
+++ b/apps/monitoring/prometheus-operator/config/alertmanager/alertmanager.yaml.j2
@@ -22,7 +22,7 @@ route:
   repeat_interval: 12h
   routes: 
   - match: 
-      alertname: DeadMansSwitch
+      alertname: Watchdog
     receiver: "null"
 
 receivers: 
