--- a/apps/monitoring/kubernetes/deploy/kube-controller-manager.yaml.j2
+++ b/apps/monitoring/kubernetes/deploy/kube-controller-manager.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kube-controller-manager-prometheus-discovery
+  name: kube-controller-manager
   namespace: kube-system
   labels:
     app: kube-controller-manager
