--- a/apps/monitoring/kubernetes/deploy/kube-dns.yaml.j2
+++ b/apps/monitoring/kubernetes/deploy/kube-dns.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kube-dns-prometheus-discovery
+  name: kube-dns
   namespace: kube-system
   labels:
     app: kube-dns
