--- a/apps/monitoring/kubernetes/deploy/kube-scheduler.yaml.j2
+++ b/apps/monitoring/kubernetes/deploy/kube-scheduler.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kube-scheduler-prometheus-discovery
+  name: kube-scheduler
   namespace: kube-system
   labels:
     app: kube-scheduler
