--- a/apps/infra/ingress-nginx/deploy/configMap-tcp.yaml.j2
+++ b/apps/infra/ingress-nginx/deploy/configMap-tcp.yaml.j2
@@ -3,6 +3,9 @@ kind: ConfigMap
 metadata:
   name: tcp-services
   namespace: ingress-nginx
+  labels:
+    app.kubernetes.io/name: ingress-nginx
+    app.kubernetes.io/part-of: ingress-nginx
 data:
 {% if kubernetes_nginx_ingress_mqtt_port | default(false) and kubernetes_nginx_ingress_mqtt_target is defined %}
   1883: "{{ kubernetes_nginx_ingress_mqtt_target }}"
