--- a/apps/monitoring/prometheus-operator/deploy/prometheus/prometheus.yaml.j2
+++ b/apps/monitoring/prometheus-operator/deploy/prometheus/prometheus.yaml.j2
@@ -38,16 +38,17 @@ spec:
   serviceAccountName: prometheus-k8s
   serviceMonitorNamespaceSelector: {}
   serviceMonitorSelector: {}
-  volumeClaimTemplate:
-    metadata:
-      name: prometheus-k8s-pv-claim
-    spec:
-      accessModes: [ "ReadWriteOnce" ]
-      storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
-      resources:
-        requests:
-          storage: 10G
-      selector:
-        matchLabels:
-          app: prometheus-k8s
-          app-component: prometheus
+  storage:
+    volumeClaimTemplate:
+      metadata:
+        name: prometheus-k8s-pv-claim
+      spec:
+        accessModes: [ "ReadWriteOnce" ]
+        storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
+        resources:
+          requests:
+            storage: 10G
+        selector:
+          matchLabels:
+            app: prometheus-k8s
+            app-component: prometheus
