--- a/apps/monitoring/prometheus-operator/deploy/prometheus/prometheus.yaml.j2
+++ b/apps/monitoring/prometheus-operator/deploy/prometheus/prometheus.yaml.j2
@@ -38,6 +38,7 @@ spec:
   serviceAccountName: prometheus-k8s
   serviceMonitorNamespaceSelector: {}
   serviceMonitorSelector: {}
+  retention: {{ prometheus_retention | default('7d') }}
   storage:
     volumeClaimTemplate:
       metadata:
