Switch to a custom LemonLDAP image and add custom plugin to add a header when a user authentication fails

--- a/apps/auth/lemonldap/deploy/statefulset.yaml.j2
+++ b/apps/auth/lemonldap/deploy/statefulset.yaml.j2
@@ -38,7 +38,7 @@ spec:
           mountPath: {{ lemonldap_persistent_volume_path }}
       containers:
       - name: lemonldap
-        image: coudot/lemonldap-ng:2.0.3
+        image: {{ kubernetes_registry_url }}/lemonldap
         ports:
           - containerPort: 80
             name: http
