Set Sickchill api key

--- a/apps/download/sickchill/config/config_delta.ini.j2
+++ b/apps/download/sickchill/config/config_delta.ini.j2
@@ -8,6 +8,8 @@ web_root = {{ sickchill_context_root }}
 web_password = ""
 web_username = ""
 
+api_key = "{{ sickchill_api_key }}"
+
 enable_https = 0
 https_cert = server.crt
 https_key = server.key
