--- a/apps/download/sabnzbd/config/sabnzbd_delta.ini.j2
+++ b/apps/download/sabnzbd/config/sabnzbd_delta.ini.j2
@@ -17,13 +17,22 @@ https_chain = ""
 dirscan_dir = /mnt/download/newsgroup/nzbFiles
 download_dir = /mnt/download/newsgroup/pending
 complete_dir = /mnt/download/newsgroup/done
+script_dir = /opt/nzbToMedia
 
 username = "{{ sabnzbd_user }}"
 password = "{{ sabnzbd_password }}"
 
 #nzb_key = 12345678901234567890123456789012
-#api_key = 12345678901234567890123456789012
+api_key = "{{ sabnzbd_api_key }}"
 
 email_server = "{{ sabnzbd_smtp_host }}:{{ sabnzbd_smtp_port }}"
 email_account = "{{ sabnzbd_smtp_user }}"
 email_pwd = "{{ sabnzbd_smtp_password }}"
+
+{% if sabnzbd_nzbToMedia_config_sickbeard | default([]) | length > 0 %}
+[categories]
+{% for category_name in sabnzbd_nzbToMedia_config_sickbeard %}
+[[{{ category_name }}]]
+script = nzbToSickBeard.py
+{% endfor %}
+{% endif %}
