--- a/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
+++ b/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: homeassistant
     spec:
       containers:
-      - image: homeassistant/home-assistant:0.89.2
+      - image: {{ kubernetes_registry_url }}/homeassistant
         name: homeassistant
         ports:
         - containerPort: 8123
