--- a/apps/home/homeassistant/deploy/ldapauth-configmap.yaml.j2
+++ b/apps/home/homeassistant/deploy/ldapauth-configmap.yaml.j2
@@ -7,7 +7,5 @@ metadata:
     app: homeassistant
     app-component: homeassistant
 data:
-{% for homeassistant_ldapauth_file in homeassistant_ldapauth_files %}
-  {{ homeassistant_ldapauth_file | basename | replace(".j2", "") }}: |-
-    {{ lookup(homeassistant_ldapauth_file | regex_search('.j2$') | ternary('template','file'), homeassistant_ldapauth_file) | replace('\n', '\n    ') }}
-{% endfor %}
+  config.cfg: |-
+    {{ lookup('template', kubernetes_app_root_path + '/home/homeassistant/config/ldap-auth/config.cfg.j2') | replace('\n', '\n    ') }}
