Move as many pods as posssible out of Node_Home

--- a/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
+++ b/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
@@ -59,7 +59,7 @@ spec:
         secret:
           secretName: cluster-ca
       nodeSelector:
-        capability/home: 'yes'
+        capability/general-purpose: 'yes'
   volumeClaimTemplates:
   - metadata:
       name: homeassistant-pv-claim
