Fix incorrect resolution for master. It was using the default "127.0.0.1" line from /etc/hosts.

--- a/ansible/roles/dnsmasq/templates/dnsmasq.conf.j2
+++ b/ansible/roles/dnsmasq/templates/dnsmasq.conf.j2
@@ -127,10 +127,10 @@ local=/{{ dns_local_domain }}/
 
 # If you don't want dnsmasq to read /etc/hosts, uncomment the
 # following line.
-#no-hosts
+no-hosts
 # or if you want it to read another file, as well as /etc/hosts, use
 # this.
-#addn-hosts=/etc/banner_add_hosts
+addn-hosts=/etc/dnsmasq_hosts
 
 # Set this (and domain: see below) if you want to have a domain
 # automatically added to simple names in a hosts-file.
