--- a/ansible/roles/kubernetes-storage/templates/persistant-volume-local.yaml.j2
+++ b/ansible/roles/kubernetes-storage/templates/persistant-volume-local.yaml.j2
@@ -15,7 +15,7 @@ spec:
   persistentVolumeReclaimPolicy: {{ item.value.reclaim_policy }}
   storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
   local:
-    path: /dev/kubernetes_vg/{{ item.key }}
+    path: /dev/{{ local_lvm_storage_vg }}/{{ item.key }}
   nodeAffinity:
     required:
       nodeSelectorTerms:
