--- a/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
+++ b/apps/home/homeassistant/deploy/homeassistant-statefulSet.yaml.j2
@@ -65,10 +65,10 @@ spec:
       name: homeassistant-pv-claim
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
+      storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 1G
+          storage: 256M
       selector:
         matchLabels:
           app: homeassistant
