--- a/apps/home/nodered/deploy/statefulSet.yaml.j2
+++ b/apps/home/nodered/deploy/statefulSet.yaml.j2
@@ -39,6 +39,7 @@ spec:
           mountPath: /etc/localtime
         - name: nodered-pv-claim
           mountPath: /data
+          subPath: data
         - name: nodered-config
           mountPath: /data/settings.js
           subPath: settings.js
@@ -64,10 +65,10 @@ spec:
       name: nodered-pv-claim
     spec:
       accessModes: [ "ReadWriteOnce" ]
-      storageClassName: {{ kubernetes_local_lvm_storage_class_name }}
+      storageClassName: {{ kubernetes_glusterfs_storage_class_name }}
       resources:
         requests:
-          storage: 1G
+          storage: 128M
       selector:
         matchLabels:
           app: nodered
