Add missing Gluster exporter metrics

--- a/ansible/roles/glusterfs-server-install/templates/gluster-exporter.toml.j2
+++ b/ansible/roles/glusterfs-server-install/templates/gluster-exporter.toml.j2
@@ -30,8 +30,18 @@ name = "gluster_brick"
 sync-interval = 5
 disabled = false
 
+[collectors.gluster_brick_status]
+name = "gluster_brick_status"
+sync-interval = 15
+disabled = false
+
 [collectors.gluster_volume_counts]
 name = "gluster_volume_counts"
+sync-interval = 5
+disabled = false
+
+[collectors.gluster_volume_status]
+name = "gluster_volume_status"
 sync-interval = 5
 disabled = false
 
@@ -45,7 +55,12 @@ name = "gluster_volume_profile"
 sync-interval = 5
 disabled = false
 
-[collectors.gluster_brick_status]
-name = "gluster_brick_status"
-sync-interval = 15
+[collectors.gluster_peer_counts]
+name = "gluster_peer_counts"
+sync-interval = 5
+disabled = false
+
+[collectors.gluster_peer_info]
+name = "gluster_peer_info"
+sync-interval = 5
 disabled = false
